--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -8,32 +8,32 @@
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="min-h-screen flex flex-col bg-slate-50 dark:bg-slate-800">
+<body class="h-screen flex flex-col bg-slate-50 dark:bg-slate-800">
 <header class="sticky top-0 bg-white dark:bg-slate-900 drop-shadow-md select-none flex flex-col z-50">
     <div class="px-4 py-2 flex flex-row items-center justify-between">
         <a href="/" class="noline p-2">
             <div class="font-medium text-xl text-slate-800 dark:text-slate-200">Moritz Huber</div>
         </a>
         <div class="flex space-x-2">
-{#            {% if not auth %}#}
-{#                <a href="/login" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Login">#}
-{#                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">#}
-{#                        <g fill="none">#}
-{#                            <path d="M0 0h24v24H0z"/>#}
-{#                            <path d="M0 0h24v24H0z"/>#}
-{#                        </g>#}
-{#                        <path d="M10.3 7.7a.984.984 0 0 0 0 1.4l1.9 1.9H3c-.55 0-1 .45-1 1s.45 1 1 1h9.2l-1.9 1.9a.984.984 0 0 0 0 1.4c.39.39 1.01.39 1.4 0l3.59-3.59a.996.996 0 0 0 0-1.41L11.7 7.7a.984.984 0 0 0-1.4 0zM20 19h-7c-.55 0-1 .45-1 1s.45 1 1 1h7c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v14z"/>#}
-{#                    </svg>#}
-{#                </a>#}
-{#            {% else %}#}
-{#                <a href="/logout" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Logout">#}
-{#                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">#}
-{#                        <path d="M0 0h24v24H0V0z" fill="none"/>#}
-{#                        <path d="M5 5h6c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h6c.55 0 1-.45 1-1s-.45-1-1-1H5V5z"/>#}
-{#                        <path d="m20.65 11.65-2.79-2.79a.501.501 0 0 0-.86.35V11h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v1.79c0 .45.54.67.85.35l2.79-2.79c.2-.19.2-.51.01-.7z"/>#}
-{#                    </svg>#}
-{#                </a>#}
-{#            {% endif %}#}
+            {#            {% if not auth %} #}
+            {#                <a href="/login" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Login"> #}
+            {#                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600"> #}
+            {#                        <g fill="none"> #}
+            {#                            <path d="M0 0h24v24H0z"/> #}
+            {#                            <path d="M0 0h24v24H0z"/> #}
+            {#                        </g> #}
+            {#                        <path d="M10.3 7.7a.984.984 0 0 0 0 1.4l1.9 1.9H3c-.55 0-1 .45-1 1s.45 1 1 1h9.2l-1.9 1.9a.984.984 0 0 0 0 1.4c.39.39 1.01.39 1.4 0l3.59-3.59a.996.996 0 0 0 0-1.41L11.7 7.7a.984.984 0 0 0-1.4 0zM20 19h-7c-.55 0-1 .45-1 1s.45 1 1 1h7c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v14z"/> #}
+            {#                    </svg> #}
+            {#                </a> #}
+            {#            {% else %} #}
+            {#                <a href="/logout" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Logout"> #}
+            {#                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600"> #}
+            {#                        <path d="M0 0h24v24H0V0z" fill="none"/> #}
+            {#                        <path d="M5 5h6c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h6c.55 0 1-.45 1-1s-.45-1-1-1H5V5z"/> #}
+            {#                        <path d="m20.65 11.65-2.79-2.79a.501.501 0 0 0-.86.35V11h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v1.79c0 .45.54.67.85.35l2.79-2.79c.2-.19.2-.51.01-.7z"/> #}
+            {#                    </svg> #}
+            {#                </a> #}
+            {#            {% endif %} #}
             <div class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700 cursor-pointer md:hidden"
                  id="menu-toggle">
                 {# Menu icon #}
@@ -45,62 +45,64 @@
         </div>
     </div>
 </header>
-
-<div class="p-4 flex-1 flex flex-col md:flex-row md:justify-center md:items-start">
-    <div class="mb-4 md:mb-0 md:mr-4 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md md:block" id="nav-container">
-        <nav class="m-2 text-slate-800 dark:text-slate-400 font-medium">
-            <div class="p-2 flex flex-col space-y-2">
-                <a href="/" class="menu-item noline {% if tab == "home" %}active{% endif %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M10 19v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87L12.67 3.6c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87H5v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"/>
-                    </svg>
-                    <span>Startseite</span>
-                </a>
-                <a href="https://schule.moritzhuber.de" class="menu-item noline">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"/>
-                    </svg>
-                    <span>Infotafel</span>
-                </a>
-                <a href="/pgp" class="menu-item noline {% if tab == "pgp" %}active{% endif %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M12.65 10a5.998 5.998 0 0 0-6.88-3.88c-2.29.46-4.15 2.29-4.63 4.58A6.006 6.006 0 0 0 7 18a5.99 5.99 0 0 0 5.65-4H17v2c0 1.1.9 2 2 2s2-.9 2-2v-2c1.1 0 2-.9 2-2s-.9-2-2-2h-8.35zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/>
-                    </svg>
-                    <span>PGP-Schlüssel</span>
-                </a>
-                <a href="https://cloud.moritzhuber.de/s/upload-moritz" class="menu-item noline">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l4.65-4.65c.2-.2.51-.2.71 0L17 13h-3z"/>
-                    </svg>
-                    <span>Filedrop</span>
-                </a>
-                <a href="https://github.com/Huber1" class="menu-item noline">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                        <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
-                    </svg>
-                    <span>GitHub</span>
-                </a>
-            </div>
-        </nav>
+<div class="flex-1 flex flex-col overflow-y-scroll">
+    <div class="px-4 pb-4 flex-1 flex flex-col md:flex-row md:justify-center md:items-start relative">
+        <div class="md:sticky md:top-4 mt-4 md:mt-0 md:mr-4 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md md:block"
+             id="nav-container">
+            <nav class="m-2 text-slate-800 dark:text-slate-400 font-medium">
+                <div class="p-2 flex flex-col space-y-2">
+                    <a href="/" class="menu-item noline {% if tab == "home" %}active{% endif %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                            <path d="M0 0h24v24H0V0z" fill="none"/>
+                            <path d="M10 19v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87L12.67 3.6c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87H5v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"/>
+                        </svg>
+                        <span>Startseite</span>
+                    </a>
+                    <a href="https://schule.moritzhuber.de" class="menu-item noline">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                            <path d="M0 0h24v24H0V0z" fill="none"/>
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"/>
+                        </svg>
+                        <span>Infotafel</span>
+                    </a>
+                    <a href="/pgp" class="menu-item noline {% if tab == "pgp" %}active{% endif %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                            <path d="M0 0h24v24H0V0z" fill="none"/>
+                            <path d="M12.65 10a5.998 5.998 0 0 0-6.88-3.88c-2.29.46-4.15 2.29-4.63 4.58A6.006 6.006 0 0 0 7 18a5.99 5.99 0 0 0 5.65-4H17v2c0 1.1.9 2 2 2s2-.9 2-2v-2c1.1 0 2-.9 2-2s-.9-2-2-2h-8.35zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/>
+                        </svg>
+                        <span>PGP-Schlüssel</span>
+                    </a>
+                    <a href="https://cloud.moritzhuber.de/s/upload-moritz" class="menu-item noline">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                            <path d="M0 0h24v24H0V0z" fill="none"/>
+                            <path d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l4.65-4.65c.2-.2.51-.2.71 0L17 13h-3z"/>
+                        </svg>
+                        <span>Filedrop</span>
+                    </a>
+                    <a href="https://github.com/Huber1" class="menu-item noline">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                            <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
+                        </svg>
+                        <span>GitHub</span>
+                    </a>
+                </div>
+            </nav>
+        </div>
+        <script>
+            document.querySelector('#nav-container').classList.add('hidden')
+            document.querySelector('#menu-toggle').addEventListener("click", function () {
+                document.querySelector('#nav-container').classList.toggle('hidden');
+            })
+        </script>
+        <div class="mt-4 p-4 md:flex-1 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md text-slate-900 dark:text-slate-400 max-w-5xl">
+            {% block content %}{% endblock %}
+        </div>
     </div>
-    <script>
-        document.querySelector('#nav-container').classList.add('hidden')
-        document.querySelector('#menu-toggle').addEventListener("click", function () {
-            document.querySelector('#nav-container').classList.toggle('hidden');
-        })
-    </script>
-    <div class="p-4 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md text-slate-900 dark:text-slate-400 max-w-5xl flex-1">
-        {% block content %}{% endblock %}
-    </div>
+    <footer class="p-4 bg-white dark:bg-slate-900 dark:text-slate-400 drop-shadow-md text-center text-slate-800">
+        <a href="/impressum">Impressum</a> | &copy 2020 - {{ 'now' | date('Y') }} by <a href="/" class="noline">Moritz
+            Huber</a>
+    </footer>
 </div>
 
-<footer class="p-4 bg-white dark:bg-slate-900 dark:text-slate-400 drop-shadow-md text-center text-slate-800">
-    <a href="/impressum">Impressum</a> | &copy 2020 - {{ 'now' | date('Y') }} by <a href="/" class="noline">Moritz
-        Huber</a>
-</footer>
 </body>
 </html>
